# Fourier-StreakNet

./: .gitignore  CLEANUP_REPORT.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/infer/: pipeline.yaml
configs/model/: fourier_attention.yaml  unet.yaml  unet_notch.yaml
configs/train/: restoration.yaml  segmentation.yaml
scripts/: setup_environment.py  test_restoration.py  test_segmentation.py  train_restoration.py  train_segmentation.py
src/ultrastreak/: __init__.py
src/ultrastreak/cli/: __init__.py  cli.py  commands.py
src/ultrastreak/inference/: __init__.py  pipeline.py
src/ultrastreak/models/: __init__.py  fourier_attention_net.py  unet.py  unet_notch.py
src/ultrastreak/models/blocks/: __init__.py  attention.py  fourier.py  unet_blocks.py
src/ultrastreak/utils/: __init__.py  io.py  logging.py  metrics.py  seed.py  visualization.py
